
Following details changes made in various versions of Vampire which have
been made available.

.. warning ::
  The current officially released version of Vampire is 1.6. Features
  described here for Vampire 1.7 are only available by checking out
  the development copy of the source code from the Vampire source code
  repository directly.


Changes in Vampire 1.7
======================

- Added mechanism whereby Python import mechanism is partly overridden
  such that although the standard Python "import" statement is used, under
  the covers, the Vampire import mechanism is used to load a module.

  The consequences of this are that module imports at global scope in a
  module containing a handler, instead of being written as::

    import os
    import vampire
    directory = os.path.split(__file__)[0]
    mymodule = vampire.importModule("mymodule",directory,__req__)

  can be written in more traditional form of::

    import mymodule

  Because the Vampire import mechanism is actually being used, a change in
  the imported module will automatically result in the handler module being
  reimported as necessary when a request arrives, even though the handler
  module itself wasn't changed.

  To enable this feature it is necessary to enable it within the Apache
  configuration by using the "PythonOption" directive to set the
  "VampireImportHooks" option to "On"::

    PythonOption VampireImportHooks On

  By default, only the directory the handler module is contained within
  will be searched for the target module. If the target module is found,
  then "vampire.importModule()" will be used to load it. If the target
  module cannot be found, the standard Python import mechanism will be used
  which would result in a search within directories defined by "sys.path".

  Additional directories to search before falling back to using the
  standard Python import mechanism, can be specified using the Vampire